# magrit

./: .gitignore  .travis.yml
client/src/main/c++/: CMakeLists.txt  build_cat.cpp  build_cat.hpp  build_log.cpp  build_log.hpp  build_send.cpp  build_send.hpp  config.cpp  config_add.cpp  config_add.hpp  config_remove.cpp  config_remove.hpp  config_use.cpp  config_use.hpp  generic_command.cpp  generic_command.hpp  main.cpp  monitor.cpp  monitor.hpp  share.cpp  share.hpp  status.cpp  status.hpp  utils.cpp  utils.hpp  wait.cpp
client/src/main/c++/tests/: MainTestSuite.cpp
client/src/main/c++/toolchain/: Linux-gcc-i686-debug.cmake  Linux-gcc-i686.cmake
